--- a/app/templates/pages/createcontract/token.html
+++ b/app/templates/pages/createcontract/token.html
@@ -1,10 +1,10 @@
-<!--<div class="just-text">-->
-    <!--<i class="icon-help"></i>-->
-    <!--<a href="https://www.youtube.com/watch?v=4U2uH4TtYwA"-->
-       <!--target="_blank"-->
-       <!--translate="CONTRACTS.FORMS.WATCH_INSTRUCTION">-->
-    <!--</a>-->
-<!--</div>-->
+<div class="just-text">
+    <i class="icon-help"></i>
+    <a href="https://youtu.be/WWtObEFdrhc"
+       target="_blank"
+       translate="CONTRACTS.FORMS.WATCH_INSTRUCTION">
+    </a>
+</div>
 <div class="shadow-block">
     <div class="shadow-block__content shadow-block__content_min-tb-padding shadow-block__content_no-lr-padding">
         <div class="contract-info__network"
