--- a/app/templates/pages/buytokens-forms/duc-form.html
+++ b/app/templates/pages/buytokens-forms/duc-form.html
@@ -28,9 +28,9 @@
                     <div class="input-after">USDC</div>
                 </div>
             </div>
-            <div class="grid-cell grid-cell-1-4 grid-cell-ps-1 form-control-description"
-                 ng-include="getTemplate('pages/buytokens-forms/usdt')">
-            </div>
+            <!--<div class="grid-cell grid-cell-1-4 grid-cell-ps-1 form-control-description"-->
+                 <!--ng-include="getTemplate('pages/buytokens-forms/usdt')">-->
+            <!--</div>-->
         </div><br/>
 
         <div class="grid-row">
